# serializer version: 1
# name: test_climate_platform
  list([
    dict({
      'device_class': None,
      'entity_id': 'climate.traeger_0123456789ab_climate',
      'original_name': '0123456789ab Climate',
      'translation_key': None,
      'unique_id': '0123456789ab_climate',
    }),
    dict({
      'device_class': None,
      'entity_id': 'climate.traeger_cd0123456789_climate',
      'original_name': 'cd0123456789 Climate',
      'translation_key': None,
      'unique_id': 'cd0123456789_climate',
    }),
  ])
# ---
# name: test_climate_platform_asyncadd
  list([
    dict({
      'device_class': None,
      'entity_id': 'climate.0123456789ab_probe_12charid1',
      'original_name': "Johny's Traeger Probe 12charId1",
      'translation_key': None,
      'unique_id': '0123456789ab_probe_12charId1',
    }),
    dict({
      'device_class': None,
      'entity_id': 'climate.0123456789ab_probe_12charid2',
      'original_name': "Johny's Traeger Probe 12charId2",
      'translation_key': None,
      'unique_id': '0123456789ab_probe_12charId2',
    }),
    dict({
      'device_class': None,
      'entity_id': 'climate.0123456789ab_probe_p0',
      'original_name': "Johny's Traeger Probe p0",
      'translation_key': None,
      'unique_id': '0123456789ab_probe_p0',
    }),
    dict({
      'device_class': None,
      'entity_id': 'climate.0123456789ab_probe_probe0',
      'original_name': "Johny's Traeger Probe probe0",
      'translation_key': None,
      'unique_id': '0123456789ab_probe_probe0',
    }),
    dict({
      'device_class': None,
      'entity_id': 'climate.0123456789ab_probe_probe1',
      'original_name': "Johny's Traeger Probe probe1",
      'translation_key': None,
      'unique_id': '0123456789ab_probe_probe1',
    }),
    dict({
      'device_class': None,
      'entity_id': 'climate.traeger_0123456789ab_climate',
      'original_name': "Johny's Traeger Climate",
      'translation_key': None,
      'unique_id': '0123456789ab_climate',
    }),
    dict({
      'device_class': None,
      'entity_id': 'climate.traeger_cd0123456789_climate',
      'original_name': 'cd0123456789 Climate',
      'translation_key': None,
      'unique_id': 'cd0123456789_climate',
    }),
  ])
# ---
# name: test_climate_setgrilltemp_cmd[climate-traeger_0123456789ab_climate][01-init]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Climate",
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
      ),
      'icon': 'mdi:grill',
      'max_temp': 500,
      'min_temp': 165,
      'supported_features': <ClimateEntityFeature: 385>,
      'target_temp_step': 5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.traeger_0123456789ab_climate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_climate_setgrilltemp_cmd[climate-traeger_0123456789ab_climate][02-ready]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 43,
      'friendly_name': "Johny's Traeger Climate",
      'grill_native_cur_val': 43,
      'grill_native_set_val': 165,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
      ),
      'icon': 'mdi:grill',
      'max_temp': 500,
      'min_temp': 165,
      'supported_features': <ClimateEntityFeature: 385>,
      'target_temp_step': 5,
      'temperature': 165,
    }),
    'context': <ANY>,
    'entity_id': 'climate.traeger_0123456789ab_climate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setgrilltemp_cmd[climate-traeger_0123456789ab_climate][03-changed]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 43,
      'friendly_name': "Johny's Traeger Climate",
      'grill_native_cur_val': 43,
      'grill_native_set_val': 170,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
      ),
      'icon': 'mdi:grill',
      'max_temp': 500,
      'min_temp': 165,
      'supported_features': <ClimateEntityFeature: 385>,
      'target_temp_step': 5,
      'temperature': 170,
    }),
    'context': <ANY>,
    'entity_id': 'climate.traeger_0123456789ab_climate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setgrilltemp_cmd[climate-traeger_0123456789ab_climate][04-changed2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 43,
      'friendly_name': "Johny's Traeger Climate",
      'grill_native_cur_val': 43,
      'grill_native_set_val': 495,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
      ),
      'icon': 'mdi:grill',
      'max_temp': 500,
      'min_temp': 165,
      'supported_features': <ClimateEntityFeature: 385>,
      'target_temp_step': 5,
      'temperature': 495,
    }),
    'context': <ANY>,
    'entity_id': 'climate.traeger_0123456789ab_climate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setgrilltemp_cmd[climate-traeger_0123456789ab_climate][05-cool]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 43,
      'friendly_name': "Johny's Traeger Climate",
      'grill_native_cur_val': 43,
      'grill_native_set_val': 495,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
      ),
      'icon': 'mdi:grill',
      'max_temp': 500,
      'min_temp': 165,
      'supported_features': <ClimateEntityFeature: 385>,
      'target_temp_step': 5,
      'temperature': 495,
    }),
    'context': <ANY>,
    'entity_id': 'climate.traeger_0123456789ab_climate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_setgrilltemp_cmd[climate-traeger_0123456789ab_climate][06-off]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 43,
      'friendly_name': "Johny's Traeger Climate",
      'grill_native_cur_val': 43,
      'grill_native_set_val': 165,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
      ),
      'icon': 'mdi:grill',
      'max_temp': 500,
      'min_temp': 165,
      'supported_features': <ClimateEntityFeature: 385>,
      'target_temp_step': 5,
      'temperature': 165,
    }),
    'context': <ANY>,
    'entity_id': 'climate.traeger_0123456789ab_climate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_climate_setgrilltemp_cmd[climate-traeger_0123456789ab_climate][07-not_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Climate",
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
      ),
      'icon': 'mdi:grill',
      'max_temp': 500,
      'min_temp': 165,
      'supported_features': <ClimateEntityFeature: 385>,
      'target_temp_step': 5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.traeger_0123456789ab_climate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc0][01-init]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Probe p0",
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_p0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc0][02-ready]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 1,
      'friendly_name': "Johny's Traeger Probe p0",
      'grill_native_cur_val': 1,
      'grill_native_set_val': 2,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_mode': 'none',
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
      'temperature': 2,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_p0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc0][03-changed]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 85,
      'friendly_name': "Johny's Traeger Probe p0",
      'grill_native_cur_val': 85.0,
      'grill_native_set_val': 170,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_mode': 'none',
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
      'temperature': 170,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_p0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc0][04-changed2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 90,
      'friendly_name': "Johny's Traeger Probe p0",
      'grill_native_cur_val': 90.0,
      'grill_native_set_val': 180,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_mode': 'none',
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
      'temperature': 180,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_p0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc0][05-not_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Probe p0",
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_p0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc1][01-init]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Probe probe0",
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_probe0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc1][02-ready]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 3,
      'friendly_name': "Johny's Traeger Probe probe0",
      'grill_native_cur_val': 3,
      'grill_native_set_val': 4,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_mode': 'none',
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
      'temperature': 4,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_probe0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc1][03-changed]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 85,
      'friendly_name': "Johny's Traeger Probe probe0",
      'grill_native_cur_val': 85.0,
      'grill_native_set_val': 170,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_mode': 'none',
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
      'temperature': 170,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_probe0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc1][04-changed2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 90,
      'friendly_name': "Johny's Traeger Probe probe0",
      'grill_native_cur_val': 90.0,
      'grill_native_set_val': 180,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_mode': 'none',
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
      'temperature': 180,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_probe0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc1][05-not_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Probe probe0",
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_probe0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc2][01-init]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Probe probe1",
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_probe1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc2][02-ready]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 5,
      'friendly_name': "Johny's Traeger Probe probe1",
      'grill_native_cur_val': 5,
      'grill_native_set_val': 6,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_mode': 'none',
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
      'temperature': 6,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_probe1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc2][03-changed]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 85,
      'friendly_name': "Johny's Traeger Probe probe1",
      'grill_native_cur_val': 85.0,
      'grill_native_set_val': 170,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_mode': 'none',
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
      'temperature': 170,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_probe1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc2][04-changed2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 90,
      'friendly_name': "Johny's Traeger Probe probe1",
      'grill_native_cur_val': 90.0,
      'grill_native_set_val': 180,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_mode': 'none',
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
      'temperature': 180,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_probe1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc2][05-not_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Probe probe1",
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_probe1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc3][01-init]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Probe 12charId1",
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_12charid1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc3][02-ready]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 7,
      'friendly_name': "Johny's Traeger Probe 12charId1",
      'grill_native_cur_val': 7,
      'grill_native_set_val': 8,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_mode': 'none',
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
      'temperature': 8,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_12charid1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc3][03-changed]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 85,
      'friendly_name': "Johny's Traeger Probe 12charId1",
      'grill_native_cur_val': 85.0,
      'grill_native_set_val': 170,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_mode': 'none',
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
      'temperature': 170,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_12charid1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc3][04-changed2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 90,
      'friendly_name': "Johny's Traeger Probe 12charId1",
      'grill_native_cur_val': 90.0,
      'grill_native_set_val': 180,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_mode': 'none',
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
      'temperature': 180,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_12charid1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc3][05-not_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Probe 12charId1",
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_12charid1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc4][01-init]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Probe 12charId2",
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_12charid2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc4][02-ready]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 9,
      'friendly_name': "Johny's Traeger Probe 12charId2",
      'grill_native_cur_val': 9,
      'grill_native_set_val': 10,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_mode': 'none',
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
      'temperature': 10,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_12charid2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc4][03-changed]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 85,
      'friendly_name': "Johny's Traeger Probe 12charId2",
      'grill_native_cur_val': 85.0,
      'grill_native_set_val': 170,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_mode': 'none',
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
      'temperature': 170,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_12charid2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc4][04-changed2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 90,
      'friendly_name': "Johny's Traeger Probe 12charId2",
      'grill_native_cur_val': 90.0,
      'grill_native_set_val': 180,
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_mode': 'none',
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
      'temperature': 180,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_12charid2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_setprobetemp_cmds[mqtt_msg_acc4][05-not_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': "Johny's Traeger Probe 12charId2",
      'hvac_modes': tuple(
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ),
      'icon': 'mdi:thermometer',
      'max_temp': 215,
      'min_temp': 80,
      'preset_modes': list([
        'Chicken',
        'Turkey',
        'Beef (Rare)',
        'Beef (Medium Rare)',
        'Beef (Medium)',
        'Beef (Medium Well)',
        'Beef (Well Done)',
        'Beef (Ground)',
        'Lamb (Rare)',
        'Lamb (Medium Rare)',
        'Lamb (Medium)',
        'Lamb (Medium Well)',
        'Lamb (Well Done)',
        'Lamb (Ground)',
        'Pork (Medium Rare)',
        'Pork (Medium)',
        'Pork (Well Done)',
        'Fish',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.0123456789ab_probe_12charid2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
